gbm: Remember to init format on gbm_dri_bo_create.

https://bugs.freedesktop.org/show_bug.cgi?id=60143